--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant</title>
+    <title>Contact - bestCroissant.com</title>
+    <meta
+      name="description"
+      content="Open for Drive-Thru & Indoor Service. Best Croissant Shop Dedicated to Quality."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -68,15 +72,14 @@
     </nav>
     <div class="container mt-5">
       <h1>Contact me</h1>
-      <p class="pt-3">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
-      </p>
+      <a href="mailto:info@bestCroissant.com">info@bestCroissant.com</a>
+      <h3 class="pt-3">Opening Hours</h3>
+      <ul>
+        <li>
+          <div>Monday - Friday</div>
+          <div>8:00 AM - 1:30 AM</div>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
