--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant</title>
+    <title>Croissant - bestCroissant.com</title>
+    <meta
+      name="description"
+      content="Open for Drive-Thru & Indoor Service. Best Croissant Shop Dedicated to Quality."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -64,16 +68,85 @@
       </div>
     </nav>
     <div class="container mt-5">
-      <h1>Home Page</h1>
-      <p class="pt-3">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
-      </p>
+      <h1>Croissant menu</h1>
+      <div class="row pt-3">
+        <div class="col-md-6">
+          <div class="card">
+            <h5 class="card-header">BREAKFAST</h5>
+            <div class="card-body">
+              <ul>
+                <li>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div>Hash Brown Burrito</div>
+                    <div>5.99$</div>
+                  </div>
+                  <div>choice of meat & cheese, hash brown, egg</div>
+                </li>
+                <li>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div>Wake up Panini</div>
+                    <div>4.65$</div>
+                  </div>
+                  <div>choice of bread & meat & cheese, egg</div>
+                </li>
+                <li>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div>Plain Croissant</div>
+                    <div>2$</div>
+                  </div>
+                </li>
+                <li>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div>Filled Croissant</div>
+                    <div>2$</div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card">
+            <h5 class="card-header">DRINK</h5>
+            <div class="card-body">
+              <ul>
+                <li>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div>Gourmet Coffee</div>
+                    <div>2.25$</div>
+                  </div>
+                </li>
+                <li>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div>Fountain Soda 20oz / Large Water 700ml</div>
+                    <div>1.75$</div>
+                  </div>
+                </li>
+                <li>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div>Redbull / Monster / Starbucks Frappuccino</div>
+                    <div>3.25$</div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
