--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
   <body class="contact">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="#" title="bestCroissant.com"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
             width="30"
@@ -53,7 +53,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Home</a>
+              <a class="nav-link" href="/index.html" title="Home">Home</a>
             </li>
             <li class="nav-item">
               <a
@@ -64,7 +64,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/photo.html">Photos</a>
+              <a class="nav-link" href="/photo.html" title="Photos">Photos</a>
             </li>
           </ul>
         </div>
@@ -72,7 +72,11 @@
     </nav>
     <div class="container mt-5">
       <h1>Contact me</h1>
-      <a href="mailto:info@bestCroissant.com">info@bestCroissant.com</a>
+      <a
+        href="mailto:info@bestCroissant.com"
+        title="mail to info@bestCroissant.com"
+        >info@bestCroissant.com</a
+      >
       <h3 class="pt-3">Opening Hours</h3>
       <ul>
         <li>
