--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="#" title="bestCroissant.com"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
             width="30"
@@ -53,15 +53,21 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/index.html"
+                title="Home"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link" href="/contact.html" title="Contact"
+                >Contact</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/photo.html">Photos</a>
+              <a class="nav-link" href="/photo.html" title="Photos">Photos</a>
             </li>
           </ul>
         </div>
