--- a/photo.html
+++ b/photo.html
@@ -25,7 +25,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="#" title="bestCroissant.com"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
             width="30"
@@ -53,13 +53,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Home</a>
+              <a class="nav-link" href="/index.html" title="Home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link" href="/contact.html" title="Contact"
+                >Contact</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/photo.html"
+              <a
+                class="nav-link active"
+                title="Photos"
+                aria-current="page"
+                href="/photo.html"
                 >Photos</a
               >
             </li>
